Ограничивает ширину изображений

--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
     <div class="page-wrapper">
       <header class="content-container page-header">
         <a class="logo-header" href="index.html">
-          <img src="images/logo.svg" width="139" height="70" alt="Логотип City of Sedona.">
+          <img class="logo" src="images/logo.svg" width="139" height="70" alt="Логотип City of Sedona.">
         </a>
         <nav class="navigation">
           <ul class="navigation-list">
