--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="page-wrapper">
       <header class="content-container page-header">
         <a class="logo-header" href="index.html">
-          <img src="images/logo.svg" width="139" height="70" alt="Логотип City of Sedona.">
+          <img class="logo" src="images/logo.svg" width="139" height="70" alt="Логотип City of Sedona.">
         </a>
         <nav class="navigation">
           <ul class="navigation-list">
@@ -62,7 +62,7 @@
                   <span class="advantages-item-number" aria-hidden="true">— &numero;1 —</span>
                   <p class="advantages-item-text">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
                 </div>
-                <img src="images/content/photo-1.jpg" width="800" height="384" alt="Городок Седона: двухэтажные здания.">
+                <img class="advantages-photo" src="images/content/photo-1.jpg" width="800" height="384" alt="Городок Седона: двухэтажные здания.">
               </div>
               <ul class="advantages-sublist">
                 <li class="advantages-item advantages-item-lightblue advantages-subitem">
@@ -88,7 +88,7 @@
                 <span class="advantages-item-number" aria-hidden="true">— &numero;2 —</span>
                 <p class="advantages-item-text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
               </div>
-              <img src="images/content/photo-2.jpg" width="800" height="384" alt="Мост Дьявола: мост естественного образования в каньоне.">
+              <img class="advantages-photo" src="images/content/photo-2.jpg" width="800" height="384" alt="Мост Дьявола: мост естественного образования в каньоне.">
             </li>
             <li class="advantages-item advantages-item-lightblue advantages-item-last-row">
               <h3 class="advantages-item-heading">Небольшая площадь</h3>
