Добавляет размеры для изображения

--- a/catalog.html
+++ b/catalog.html
@@ -183,7 +183,7 @@
             <article class="hotel-card">
               <a class="hotel-card-link" href="#">
                 <div class="hotel-card-image-container">
-                  <img class="hotel-card-image" src="images/hotels/hotel-1.jpg" alt="Каньон и звездное небо.">
+                  <img class="hotel-card-image" src="images/hotels/hotel-1.jpg" width="300" height="211" alt="Каньон и звездное небо.">
                 </div>
                 <h3 class="hotel-card-title">Amara Resort & Spa</h3>
               </a>
